log
Wed 27 Mar 2024 08:37:32 PM UTC: 
 list.c | 19 ++++++++++++++++---
 1 file changed, 16 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
5a01f55
Wed 27 Mar 2024 08:38:05 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d8dcb51
Wed 27 Mar 2024 08:38:22 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
66b1b75
Wed 27 Mar 2024 08:45:03 PM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
b89ca43
Wed 27 Mar 2024 08:46:59 PM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
850af8e
Wed 27 Mar 2024 08:56:53 PM UTC: 
 list.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
0c7a094
Wed 27 Mar 2024 09:01:52 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
e5e8e0f
Wed 27 Mar 2024 09:02:12 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
47069ac
Wed 27 Mar 2024 09:05:43 PM UTC: 
 list.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
af74a5e
Thu 28 Mar 2024 11:42:51 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushBack’:
list.c:115:9: error: unused variable ‘nodonuevo’ [-Werror=unused-variable]
  115 |   Node *nodonuevo = (Node *)(malloc(sizeof(Node)));
      |         ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
eead3ea
